<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F0EFF5"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#2299EE"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/shouHuXingBack"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/shouhuxing_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="7"
            android:gravity="center"
            android:text="世纪天使保险产品组合"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/shouHuXingMenu"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/shouhuxing_menu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="#F0EFF5"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:text="@string/JiBenQingKuang"
            android:textColor="#e94820" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="#ffffff"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:text="姓名"
                    android:textColor="#8E8E8E"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:background="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:text="性别"
                    android:textColor="#8E8E8E"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="8"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="男" />

                    <RadioButton
                        android:id="@+id/femaleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="女" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:text="年龄"
                    android:textColor="#8E8E8E"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:prompt="@string/age"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="世纪天使终身保险"
            android:textColor="#e94820" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="#ffffff"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="4"
                    android:text="缴费年期"
                    android:textColor="#8E8E8E"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/period"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:prompt="@string/jiaoFeiNianQi"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:text="保额"
                    android:textColor="#8E8E8E"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/baoE"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:background="@null"
                    android:inputType="number" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:text="万元"
                    android:textColor="#8E8E8E"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="少儿重大疾病重大疾病险"
            android:textColor="#e94820" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="保额"
                android:textColor="#8E8E8E"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jiBingBaoE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="6"
                android:background="@null"
                android:inputType="number" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:text="万元"
                android:textColor="#8E8E8E"
                android:textSize="20sp" />

            <!--
                 <Spinner
                android:id="@+id/jiBingBaoE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center"
                android:spinnerMode="dialog" 
                android:prompt="@string/BaoE"
                />
            -->
            <!--
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="万"
                    android:textColor="#8E8E8E"
                    android:textSize="20sp" /> -->
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/FenHongShuiPing"
            android:textColor="#e94820" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#DDDDDD"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/fenHongShuiPingLow"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/FenHongShuiPing_low"
                android:textColor="#313131" />

            <TextView
                android:id="@+id/fenHongShuiPingMiddle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#F3C095"
                android:gravity="center"
                android:text="@string/FenHongShuiPing_middle"
                android:textColor="#313131" />

            <TextView
                android:id="@+id/fenHongShuiPingHigh"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/FenHongShuiPing_high"
                android:textColor="#313131" />
        </LinearLayout>
    </LinearLayout>

  <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/commit_insurance_plan_btn_left" />

        <TextView
            android:id="@+id/commitInsurancePlan"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="18"
            android:background="@drawable/commit_insurance_plan_btn_center"
            android:gravity="center"
            android:text="@string/CommitInsurancePlan"
            android:textColor="#ffffff" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/commit_insurance_plan_btn_right" />
    </LinearLayout>

</LinearLayout>